--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>Bem-vindo</h2>
+        <h2>Bem-vindoXXXXXXXXXXXXX</h2>
         <p>Faça login para continuar</p>
         
         <!-- Botão de login do Google -->
