--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     
     <script>
         // URL do seu Web App do Google Apps Script após o deploy
-        const APPS_SCRIPT_URL = 'URL_DO_SEU_WEBAPP_AQUI';
+        const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxWUw5A71vsyNj9hO9bEAcoS86ZmMVlkv05kyPMHljSNWTwn7xWatPUQaJAkodWhfcv/exec';
 
         function showMessage(message, isError = false) {
             const messageBox = document.getElementById('messageBox');
