--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div id="loader" class="loader"></div>
 
         <div id="g_id_onload"
-             data-client_id="SEU_CLIENT_ID_AQUI"
+             data-client_id="871243412111-upmsuhdvvanuqp4to9vhl2ar962qd01c.apps.googleusercontent.com"
              data-callback="handleCredentialResponse">
         </div>
         <div class="g_id_signin" 
