--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login com Google</title>
-     <link rel="stylesheet" href="css/estiloLg.css">
+     <link rel="stylesheet" href="styles/estiloLg.css">
 </head>
 <body>
     <div class="login-container">
@@ -34,7 +34,7 @@
 
     <!-- Carrega a API do Google Identity -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script src="js/controleLg.js"></script>
+    <script src="scripts/controleLg.js"></script>
    
    
 </body>
