--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>Bem-vindo ao Sistema</h2>
+        <h2>Bem-vindo ao Sistema Rod</h2>
         <p>Faça login para continuar</p>
         
         <div id="messageBox" class="message"></div>
