--- a/dashboard.html
+++ b/dashboard.html
@@ -29,50 +29,63 @@
         }
     </script>
 
-    <div class="dashboard-container">
-        <header class="top-bar">
-            <div class="user-info">
-                <span id="welcomeMessage">Bem-vindo(a), </span>
-                <span id="userName"></span>
-            </div>
-            <button id="logoutBtn" class="logout-btn">Sair</button>
-        </header>
+<!-- Substituir conteúdo do dashboard.html -->
+<div class="dashboard-container">
+    <div class="top-bar">
+        <div class="user-info">
+            <span id="welcomeMessage">Bem-vindo(a), </span>
+            <span id="userName"></span>
+        </div>
+        <button id="logoutBtn" class="logout-btn">Sair</button>
+    </div>
 
-        <div class="dashboard-grid">
-            <div class="card">
-                <h3>Estatísticas Gerais</h3>
-                <canvas id="generalStats"></canvas>
-            </div>
-
-            <div class="card">
-                <h3>Dados Mensais</h3>
-                <canvas id="monthlyData"></canvas>
-            </div>
-
-            <div class="card wide">
-                <h3>Tabela de Registros</h3>
-                <div class="table-container">
-                    <table id="dataTable">
-                        <thead>
-                            <tr>
-                                <th>Data</th>
-                                <th>Descrição</th>
-                                <th>Status</th>
-                                <th>Valor</th>
-                            </tr>
-                        </thead>
-                        <tbody id="tableBody">
-                            <!-- Dados serão inseridos via JavaScript -->
-                        </tbody>
-                    </table>
+    <div class="dashboard-grid">
+        <div class="card">
+            <h3>Estatísticas Gerais</h3>
+            <div class="stats-container">
+                <div class="stat-item">
+                    <span class="stat-value" id="totalAlunos">0</span>
+                    <span class="stat-label">Total de Alunos</span>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-value" id="totalTransporte">0</span>
+                    <span class="stat-label">Usam Transporte</span>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-value" id="totalBolsa">0</span>
+                    <span class="stat-label">Bolsa Família</span>
                 </div>
             </div>
+        </div>
 
-            <div class="card">
-                <h3>Distribuição</h3>
-                <canvas id="distributionChart"></canvas>
+        <div class="card">
+            <h3>Distribuição por Gênero</h3>
+            <canvas id="generoChart"></canvas>
+        </div>
+
+        <div class="card">
+            <h3>Distribuição por Raça/Cor</h3>
+            <canvas id="racaChart"></canvas>
+        </div>
+
+        <div class="card wide">
+            <h3>Últimas Matrículas</h3>
+            <div class="table-container">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Aluno</th>
+                            <th>Data</th>
+                            <th>Turma</th>
+                            <th>Turno</th>
+                        </tr>
+                    </thead>
+                    <tbody id="matriculasTable"></tbody>
+                </table>
             </div>
         </div>
     </div>
+</div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
 </body>
 </html>
