--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Sistema</title>
+    <title>Login - SistemaA</title>
     
     <!-- Verificação de redirecionamento se já estiver logado -->
     <script src="scripts/indexCheck.js"></script>
