--- a/dashboard.html
+++ b/dashboard.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="styles/dashboardStyles.css">
-    <!-- Adicionar FontAwesome para ícones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="styles/dashboardStyles.css">
 </head>
 <body>
     <!-- Menu Lateral -->
     <nav class="sidebar" id="sidebar">
         <div class="sidebar-header">
-            <img src="/api/placeholder/50/50" alt="Logo" class="logo">
+            <span class="header-title">G-EDUC</span>
             <button id="toggleSidebar" class="toggle-btn">
                 <i class="fas fa-bars"></i>
             </button>
@@ -51,7 +50,7 @@
         </ul>
     </nav>
 
-    <div class="main-content">
+    <div class="main-content" id="mainContent">
         <!-- Top Bar -->
         <div class="top-bar">
             <div class="user-info">
@@ -60,11 +59,13 @@
             </div>
             <button id="logoutBtn" class="logout-btn" title="Sair">
                 <i class="fas fa-sign-out-alt"></i>
+                <span>Sair</span>
             </button>
         </div>
 
-        <!-- Dashboard Grid -->
-        <div class="dashboard-grid">
+        <div class="dashboard-container">
+            <!-- Dashboard Grid -->
+            <div class="dashboard-grid">
         <div class="card stats-card">
             <h3>Estatísticas Gerais</h3>
             <div class="stats-container">
@@ -115,6 +116,9 @@
         </div>
     </div>
 </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
+<script src="scripts/sessionCheck.js"></script>
+<script src="scripts/dashboardControl.js"></script>
 </body>
 </html>
