Descrição das alterações

--- a/dashboard.html
+++ b/dashboard.html
@@ -20,7 +20,7 @@
             <li class="active">
                 <a href="dashboard.html">
                     <i class="fas fa-chart-line"></i>
-                    <span>Dashboard</span>
+                    <span>DashboardA</span>
                 </a>
             </li>
             <li>
