Descrição das alterações

--- a/dashboard.html
+++ b/dashboard.html
@@ -43,6 +43,13 @@
         </div>
 
         <div class="dashboard-container">
+            <select id="criteriaSelect">
+                <option value="porInstituicao">Instituição</option>
+                <option value="porIdade">Idade (Faixa)</option>
+                <option value="porPai">Pai (SIM/NÃO)</option>
+                <!-- Adicione outros critérios conforme necessário -->
+              </select>
+              
             <div class="dashboard-grid">
                 <div class="card stats-card">
                     <h3>Estatísticas Gerais</h3>
