Descrição das alterações

--- a/dashboard.html
+++ b/dashboard.html
@@ -35,6 +35,23 @@
 
         <div class="dashboard-container">
             <h2>Dashboard Geral</h2>
+        
+            <!-- Adicionar os totalizadores gerais -->
+            <div class="stats-container">
+                <div class="stat-item">
+                    <span id="totalAlunos" class="stat-value">0</span>
+                    <span class="stat-label">Total de Alunos</span>
+                </div>
+                <div class="stat-item">
+                    <span id="totalTransporte" class="stat-value">0</span>
+                    <span class="stat-label">Usam Transporte</span>
+                </div>
+                <div class="stat-item">
+                    <span id="totalBolsa" class="stat-value">0</span>
+                    <span class="stat-label">Bolsa Família</span>
+                </div>
+            </div>
+        
             <div class="criteria-selector">
                 <label for="criteriaSelect">Selecionar Critério:</label>
                 <select id="criteriaSelect">
