--- a/details.html
+++ b/details.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- Scripts -->
+    <script type="module" src="scripts/detailsControl.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="scripts/sessionCheck.js"></script>
     <script src="scripts/detailsControl.js"></script>
