--- a/dashboard.html
+++ b/dashboard.html
@@ -1,10 +1,9 @@
-<!-- dashboard.html -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>G-EDUC - Dashboard</title>
+    <title>G-EDUC - Detalhes A</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/2.4.2/css/buttons.dataTables.min.css">
@@ -28,24 +27,15 @@
         </div>
 
         <div class="dashboard-container">
-            <h2>Dashboard Geral</h2>
+            <h2 id="detailTitle"></h2>
 
-            <div class="stats-container">
-                <div class="stat-item">
-                    <span id="totalAlunos" class="stat-value">0</span>
-                    <span class="stat-label">Total de Alunos</span>
+            <div class="charts-container">
+                <div class="chart-card">
+                    <h3>Distribuição por Sexo</h3>
+                    <canvas id="sexoChart"></canvas>
                 </div>
-                <div class="stat-item">
-                    <span id="totalTransporte" class="stat-value">0</span>
-                    <span class="stat-label">Usam Transporte</span>
-                </div>
-                <div class="stat-item">
-                    <span id="totalBolsa" class="stat-value">0</span>
-                    <span class="stat-label">Bolsa Família</span>
-                </div>
+                <!-- Adicione mais cards de gráficos conforme necessário -->
             </div>
-
-            <div id="dataTableContainer"></div>
         </div>
     </main>
 
@@ -59,7 +49,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.html5.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.print.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="scripts/sessionCheck.js"></script>
-    <script type="module" src="scripts/dashboardControl.js"></script>
+    <script type="module" src="scripts/detailsControl.js"></script>
 </body>
 </html>
