Descrição das alterações

--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GEDUC - Detalhes E</title>
+    <title>G-EDUC - Dashboard F</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/2.4.2/css/buttons.dataTables.min.css">
@@ -11,7 +11,7 @@
 <body>
     <aside id="sidebar" class="sidebar">
         <div class="sidebar-header">
-            <span class="header-title">GEDUC</span>
+            <span class="header-title">G-EDUC</span>
         </div>
         <ul class="sidebar-menu">
             <li><a href="dashboard.html">Dashboard</a></li>
@@ -27,30 +27,38 @@
         </div>
 
         <div class="dashboard-container">
-            <h2 id="detailTitle"></h2>
+            <h2>Dashboard Geral</h2>
 
-            <div class="charts-container">
-                <div class="chart-card">
-                    <h3>Distribuição por Sexo</h3>
-                    <canvas id="sexoChart"></canvas>
+            <div class="stats-container">
+                <div class="stat-item">
+                    <span id="totalAlunos" class="stat-value">0</span>
+                    <span class="stat-label">Total de Alunos</span>
                 </div>
-                <!-- Adicione mais cards de gráficos conforme necessário -->
+                <div class="stat-item">
+                    <span id="totalTransporte" class="stat-value">0</span>
+                    <span class="stat-label">Usam Transporte</span>
+                </div>
+                <div class="stat-item">
+                    <span id="totalBolsa" class="stat-value">0</span>
+                    <span class="stat-label">Bolsa Família</span>
+                </div>
             </div>
+
+            <div id="dataTableContainer"></div>
         </div>
     </main>
 
     <div id="loader" class="loader"></div>
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.4.2/js/dataTables.buttons.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.html5.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.print.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script type="module" src="scripts/sessionCheck.js"></script>
-    <script type="module" src="scripts/detailsControl.js"></script>
+    <!-- Scripts (ordem é importante) -->
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.4.2/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.html5.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.print.min.js"></script>
+    <script type="module" src="scripts/dashboardControl.js"></script>
 </body>
 </html>
