Descrição das alterações

--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard A</title>
+    <title>Dashboard AA</title>
     <!-- Verificação de sessão deve ser o primeiro script -->
     <script src="scripts/sessionCheck.js"></script>
     <style>
@@ -32,7 +32,7 @@
     <div class="dashboard-container">
         <header class="top-bar">
             <div class="user-info">
-                <span id="welcomeMessage">Bem-vindo(a), </span>
+                <span id="welcomeMessage">Bem-vindoAAA(a), </span>
                 <span id="userName"></span>
             </div>
             <button id="logoutBtn" class="logout-btn">Sair</button>
